fix: 카테고리 목록 조회시 수정가능한 List를 리턴하도록 수정(Aspect에서 권한 체크시 에러 발생)